added socket backend with aiven redis integrated

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "startr": "node dist/index",
+        "start": "node dist/index",
         "build": "tsc -p .",
         "dev": "tsc-watch --onSuccess \"node dist/index.js\""
     },
@@ -16,6 +16,7 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "ioredis": "^5.3.2",
         "socket.io": "^4.7.2"
     }
 }
